camera added